# cavrr

./: .gitignore  .travis.yml  CMakeLists.txt  IOREG.h  LICENSE.md  Makefile  README.md  bitutil.c  bitutil.h  cavrr.c  cavrr.h  changelog.md  ideas.md  instruction.h  instruction_decoder.c  instruction_print.c  instruction_str.c  instructions.c  instructions.h  memory.c  memory.h  operation.h  processor.c  processor.h  progress.txt  registers.c  registers.h
datasheet-info/: genInstrEnum.py  genInstrPrint.py  genInstrSelect.py
src/: CMakeLists.txt  cavrr.c  cavrr_config.h.in  instruction_str.c  memory.c  memory.h  operation.c  operation.h  processor.c  processor.h
src/util/: CMakeLists.txt  bitutil.c  bitutil.h  intelhex.c  list.c
test/: CMakeLists.txt  instructionParseTest.c  memtest.c  processor_test.c  test.c
test/add/: add.c  add.hex  add.s
test/general/: CMakeLists.txt  test_memory.c  test_memory.h  test_operation.c  test_operation.h
test/hex/: CMakeLists.txt  Makefile  Makefile.old
test/hex/src/: simpleoutput.c  simpleoutput_plusdelay.c  simplestatemachine.c
test/instr/: CMakeLists.txt  add.c  add.h  add.s  add_c.c  ldi.c  ldi.h  mov.c  mov.h  push.c  push.h  rjmp.c  rjmp.h  stdz.c  stdz.h
test/integration/: CMakeLists.txt  bitutiltest.c  instructionParseTest.c  instruction_parse_test.c  listtest.c  memtest.c  processor_test.c
tools/: quickasm.sh
util/: bitutil.c  bitutil.h  intelhex.c  intelhex.h  list.c  list.h
